recursion.logo.lessons.recursion.logo.spiral.Spiral.scala.error
Spiral:3: error: Unit does not take parameters
    spiral(steps-1,angle,length+increment,increment){
                                                    ^